# NeiroBand

./: CMakeLists.txt
Include/Capsule/: CDeviceInfo.h  CEmotions.h  CNFB.h
Source/: logfile.txt  main copy.cpp  main.cpp
